@@ -12,9 +12,11 @@ import com.squareup.kotlinpoet.ksp.toClassName
 import com.squareup.kotlinpoet.ksp.toTypeName
 import io.koraframework.database.symbol.processor.cassandra.CassandraRepositoryGenerator
 import io.koraframework.database.symbol.processor.jdbc.JdbcRepositoryGenerator
+import io.koraframework.database.symbol.processor.DbUtils.findQueryMethods
 import io.koraframework.ksp.common.AnnotationUtils.findAnnotation
 import io.koraframework.ksp.common.CommonAopUtils.extendsKeepAopAll
 import io.koraframework.ksp.common.CommonClassNames
+import io.koraframework.ksp.common.FunctionUtils.isSuspend
 import io.koraframework.ksp.common.KspCommonUtils.addOriginatingKSFile
 import io.koraframework.ksp.common.KspCommonUtils.generated
 import io.koraframework.ksp.common.exception.ProcessingErrorException
@@ -34,6 +36,37 @@ class RepositoryBuilder(
 
     fun build(repositoryDeclaration: KSClassDeclaration): TypeSpec? {
         log.debug("Generating Repository for {}", repositoryDeclaration.simpleName.asString())
+        repositoryDeclaration.findQueryMethods().firstOrNull { it.isSuspend() }?.let { method ->
+            throw ProcessingErrorException(
+                """
+                Repository method is invalid:
+                  ${method.simpleName.asString()}
+
+                Problem:
+                  Suspend methods are not supported by the repository generator.
+
+                Hint:
+                  Generated repositories support regular blocking signatures and supported async wrapper return types, not Kotlin suspend functions.
+                  For structured concurrency, enable Java preview features with --enable-preview and use StructuredTaskScope, for example:
+
+                    fun getProfile(id: Long): Profile =
+                        StructuredTaskScope.open(
+                            StructuredTaskScope.Joiner.awaitAllSuccessfulOrThrow<Any>(),
+                        ).use { scope ->
+                            val user = scope.fork(Callable { userRepository.find(id) })
+                            val orders = scope.fork(Callable { orderRepository.findByUser(id) })
+
+                            scope.join()
+
+                            Profile(user.get(), orders.get())
+                        }
+
+                Fix:
+                  Remove suspend from the method or expose an async return type supported by the repository backend.
+                """.trimIndent(),
+                method
+            )
+        }
         val name = repositoryDeclaration.getOuterClassesAsPrefix() + repositoryDeclaration.simpleName.asString() + "_Impl"
         val builder = repositoryDeclaration.extendsKeepAopAll(name, resolver)
             .generated(RepositoryBuilder::class)
